css/style.css
:root {
  --bg-primary-color: #101736;
  --bg-secondary-color: #210111;
  --bg-third-color: #040404;
  --white: #fff;
  --black: #040404;
}

* {
  box-sizing: border-box;
  margin: 0;
  padding: 0;
  scroll-behavior: smooth;
}

html {
  height: -webkit-fill-available;
}

body {
  min-height: 100vh;
  background: linear-gradient(
    180deg,
    var(--bg-third-color) 0%,
    var(--bg-primary-color) 50%,
    var(--bg-secondary-color) 100%
  );
  background-attachment: fixed;
  color: var(--white);
  font-family: "kind_sansthin", sans-serif;
  font-size: 1rem;
  overflow-x: hidden;
  margin: 0;
  display: flex;
  flex-direction: column;
}

.scene {
  flex: 1 0 auto;
  display: flex;
  flex-direction: column;
  position: relative;
  width: 100%;
}

.scene i {
  position: absolute;
  background: white;
  pointer-events: none;
  border-radius: 50%;
  animation: animate linear infinite;
  z-index: -1;
}

@keyframes animate {
  0% {
    transform: translateY(0);
    opacity: 0;
  }
  10%,
  90% {
    opacity: 1;
  }
  100% {
    transform: translateY(-100px);
    opacity: 0;
  }
}

header, main, footer {
  z-index: 5;
}

header ul {
  width: 88%;
  height: 70px;
  list-style-type: none;
  display: flex;
  flex-direction: row;
  justify-content: flex-end;
  align-items: center;
  padding: 0;
  margin: 0 auto;
}

header li {
  height: 45px;
  display: flex;
  align-items: center;
  padding: 0 20px;
}

header a {
  height: 100%;
  /* padding: 0 20px; */
  color: var(--white);
  text-decoration: none;
  display: flex;
  align-items: center;
}

header nav li:first-child {
  margin-right: auto;
}

.logo {
  font-family: "loyal_sansregularv1", sans-serif;
  font-size: 2rem;
  font-weight: bold;
  cursor: pointer;
}

header li:not(:first-child) {
  font-weight: 900;
}

header li:not(:first-child):hover,
header li:not(:first-child):active,
header li:not(:first-child):focus {
  border: 1px solid var(--white);
  transition: 0.3s ease-in-out;
}

.sidebar {
  position: fixed;
  top: 0;
  right: 0;
  height: 100vh;
  width: 250px;
  z-index: 999;
  background-color: #1017361a;
  box-shadow: -5px 0 5px 0 rgba(0, 0, 0, 0.1);
  backdrop-filter: blur(10px);
  display: none;
  flex-direction: column;
  align-items: flex-start;
  justify-content: flex-start;
  text-align: flex-start;
}

.sidebar li {
  width: 100%;
  padding: 1rem;
}

.sidebar a {
  width: 100%;
  margin: 0;
  padding: 0;
}

.menu-button {
  display: none;
}

/* Dropdown Container */
.dropdown {
  position: relative;
}

/* Dropdown Button */
.dropbtn {
  background-color: transparent;
  color: var(--white);
  border: none;
  cursor: pointer;
  display: flex;
  align-items: center;
}

.dropbtn::after {
  font-size: 12px;
}

/* Dropdown Content (Hidden by Default) */
.dropdown-content {
  display: none;
  position: absolute;
  top: 100%;
  left: -1.5rem;
  text-align: left;
  min-width: 150px;
  z-index: 1;
  list-style: none;
  padding: 0;
  margin: 0;
}

/* Dropdown Items */
.dropdown-content li {
  color: var(--white);
  /* padding: 12px 16px; */
  cursor: pointer;
}

.dropdown_item:hover, .dropdown_item:focus {
  border: 1px solid var(--white); 
  transition: 0.3s ease-in-out;
}

/* Show the dropdown menu on hover */
.dropdown:hover .dropdown-content, .dropdown:focus .dropdown-content {
  display: block;
}

/* Responsive Adjustments for Sidebar */
#showSideBarButton svg {
  stroke: var(--white);
}
.sidebar .dropdown {
  width: 100%;
}

.sidebar .dropbtn {
  width: 100%;
  text-align: left;
  padding: 12px 0;
  position: relative;
}

.sidebar .dropdown-content {
  position: static; /* Remove absolute positioning for sidebar */
  box-shadow: none;
  position: absolute;
  top: 100%;
  left: 0;
}

@keyframes glowEffect {
  0% {
    filter: drop-shadow(0 0 5px rgba(255, 204, 112, 0.7));
  }
  50% {
    filter: drop-shadow(0 0 15px rgba(255, 204, 112, 1));
  }
  100% {
    filter: drop-shadow(0 0 5px rgba(255, 204, 112, 0.7));
  }
}

/* Wobble Effect for the Cord */
@keyframes wobble {
  0% {
    transform: translateX(0);
  }
  25% {
    transform: translateX(-5px); /* Move to the left */
  }
  50% {
    transform: translateX(5px);  /* Move to the right */
  }
  75% {
    transform: translateX(-3px); /* Move a little to the left */
  }
  100% {
    transform: translateX(0); /* Back to center */
  }
}

/* Wobble effect */
@keyframes wobble {
  0% { transform: rotate(0deg); }
  25% { transform: rotate(-5deg); }
  50% { transform: rotate(5deg); }
  75% { transform: rotate(-3deg); }
  100% { transform: rotate(0deg); }
}

.wobble {
  animation: wobble 0.4s ease-in-out;
}

/********** Main Section **********/

section {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  height: auto;
  width: 80%;
  margin: 5rem auto;
}

#job_title {
  font-family: "loyal_sansregularv1", sans-serif;
  text-align: center;
  font-size: 4.8rem;
  margin: 1rem 0;
}

#description {
  color: var(--white);
  font-size: 1.2rem;
  font-weight: 800;
  line-height: 1.5;
  margin: 1rem 0;
  text-align: justify;
}

#social_media {
  display: flex;
  justify-content: space-around;
  align-items: center;
  list-style-type: none;
  width: 15%;
  margin: 1rem 0;
}

#social_media svg {
  fill: var(--white);
}

canvas {
  display: block;
}

#skills_title,
#projects_title {
  font-size: 4.5rem;
  font-family: "loyal_sansregularv1", sans-serif;
  margin-bottom: 3rem; /* Space between title and skill blocks */
}

#skills_title {
  margin-bottom: 0; /* Remove bottom margin for better spacing with skill blocks */
}

/* Container adjustment */
#skill_blocks_container {
  display: flex;
  gap: 4rem; /* Adds space between cards */
  flex-wrap: wrap;
  justify-content: center;
  width: 100%;
  padding: 0 2rem;
}

/* --- Core Container --- */
.star-map-container {
  position: relative;
  width: 100%;
  min-height: 550px; /* Base height */
  margin: 0 auto;
  perspective: 1000px;
  overflow: visible;
}
/* ... */

